app/styles/_main-content.scss
@import "variables";
@import "mixins";

.about-wrapper {
  background-image: linear-gradient(-90deg,#FFF 0,#F5F5F5 91%);
  padding-bottom: 80px;
}

.about {
  max-width: 1450px;
  margin: auto;
  @include XL {
    max-width: 900px;
  }
  @include L {
    max-width: 700px;
  }
  @include M {
    max-width: 500px;
  }
  @include S {
    max-width: 380px;
  }
  @include XS {
    max-width: 250px;
  }

  &__borderline {
    border: 3px solid $orange;
    max-width: 175px;
    margin-left: 0;
    @include M {
      margin-left: 10px;
    }
  }

  &__heading {
    padding-top: 122px;
    color: $orange;
    padding-bottom: 44px;
    font-size: 60px;
    font-weight: 700;
    text-transform: uppercase;
    @include L {
      font-size: 50px;
    }
    @include M {
      font-size: 40px;
      padding-top: 80px;
      padding-bottom: 25px;
    }
    @include S {
      font-size: 30px;
      padding-top: 40px;
      padding-bottom: 10px;
    }
  }
  &__text {
    max-width: 1200px;
    padding-top: 30px;
    padding-bottom: 40px;
    margin-right: 35%;
    font-size: 22px;
    font-weight: 400;
    line-height: 33px;
    @include L {
      font-size: 20px;
      margin-right: 0;
    }
    @include M {
      font-size: 18px;
      line-height: 20px;
    }
    @include S {
      font-size: 16px;
      padding: 30px 10px 40px 10px;
    }
  }
}

.info-wrapper {
  max-width: 1200px;
  margin: auto;
}
.more-button {
  display: inline-block;
  text-decoration: none;
  @include S {
    padding-left: 10px;
  }
  &__text {
    padding-bottom: 4px;
    padding-right: 12px;
    font-weight: 700;
    font-size: 24px;
    letter-spacing: 1px;
    text-transform: uppercase;
    color: $orange;
    transition: padding-right .3s ease;
    cursor: pointer;
    @include L {
      font-size: 20px;
    }
    @include M {
      font-size: 18px;
    }
    @include S {
      font-size: 16px;
    }
    &:hover {
      padding-right: 20px;
    }
  }
  &__image {
  }
}

.what-we-do-wrapper {
  background-image: linear-gradient(to bottom right, #fff, #eee);
  padding-bottom: 80px;
  @include S {
    padding-bottom: 50px;
  }
  @include XS {
    padding-bottom: 30px;
  }

}

.what-we-do {
  max-width: 1450px;
  margin: auto;
  &__heading {
    color: $purple;
    padding: 100px 0 40px 5px;
    font-size: 60px;
    font-weight: 700;
    text-transform: uppercase;
    @include M {
      font-size: 50px;
      padding: 80px 0 35px 5px;
    }
    @include S {
      font-size: 40px;
      paddig: 60px 0 25px 5px;
    }
    @include XS {
      font-size: 35px;
      padding: 40px 0 20px 5px;;
    }
  }
  &__borderline {
    border: 3px solid #930046;
    max-width: 175px;
    margin-left: 0;
  }
  &__subheading {
    font-size: 30px;
    font-weight: 700;
    color: #000;
    padding-top: 30px;
    padding-bottom: 40px;
    @include XL {
      text-align: center;
    }
    @include M {
      font-size: 27px;
      padding: 15px 0 20px 0;
    }
    @include S {
      font-size: 26px;
      padding: 10px 0 15px 0;
    }
  }
}

.slider-wrapper {
  width: 1210px;
  margin: 0 auto;
  @include XL {
    width: 1000px;
  }
  @include L {
    width: 700px;
  }
  @include M {
    width: 500px;
  }
  @include S {
    width: 380px;
  }
  @include XS {
    width: 270px;
  }
}

.slider-with-nav {
  display: flex;
  align-items: center;
  position: relative;
  @include XL {
    display: block;
    position: static;
  }
}

.triangle-prev {
  position: absolute;
  left: -53px;
  width: 0;
  height: 0;
  border-top: 50px solid transparent;
  border-bottom: 50px solid transparent;
  border-right: 50px solid $purple;
  font-size: 12px;
  display: flex;
  align-items: center;
  cursor: pointer;
  transition: 0.5s;
  @include XL {
    display: none;
  }
  &:hover {
    transform: scale(1.1);
  }
  &__text {
    position: absolute;
    left: 15px;
    font-size: 14px;
    color: #fff;
  }
}

.triangle-next {
  position: absolute;
  right: -50px;
  width: 0;
  height: 0;
  border-top: 50px solid transparent;
  border-bottom: 50px solid transparent;
  border-left: 50px solid $purple;
  font-size: 12px;
  display: flex;
  align-items: center;
  cursor: pointer;
  transition: 0.5s;
  @include XL {
    display: none;
  }
  &:hover {
    transform: scale(1.1);
  }
  &__text {
    position: absolute;
    right: 15px;
    font-size: 14px;
    color: #fff;
  }
}

.slider {
  display: flex;
  position: relative;
  width: 1210px;
  height: 400px;
  align-items: center;
  padding: 0 10px;
  overflow-x: hidden;
  overflow-y: visible;
  @include XL {
    display: block;
    position: static;
    height: auto;
    width: 1000px;
    overflow: hidden;
  }
  @include L {
    width: 700px;
  }
  @include M {
    width: 500px;
  }
  @include S {
    width: 380px;
  }
  @include XS {
    width: 270px;
  }
}
/* ... */

